--- a/form1.html
+++ b/form1.html
@@ -15,9 +15,9 @@
     <input type="text" id="Full Name">
     <br>
     <br>
-    <!--DOB input-->
-    <label for="dob">DOB</label>
-    <input type="date" id="DOB"/>
+    <!--Message-->
+    <label for="Message">Your Message</label>
+    <input type="text" placeholder="Message"/>
     <br>
     <br>
     <!--Time Input-->
