--- a/form1.html
+++ b/form1.html
@@ -2,30 +2,21 @@
 <html lang="en">
 <head>
     <title>Welcome Page</title>
+    <style>
+        h1{
+            text-align: center;
+            color: rgb(0, 0, 0);
+        }
+    </style>
 </head>
 <body>
-    <fieldset style="background-color: darkgrey;">
+    <fieldset style="background-color:lightslategray;">
     <h1>Welcome in Enjoy Programming</h1>
-    <h2>We are Help you to Become a good Developer</h2>
-    <img src="./assets/welcome.jpeg"/>
-    <br>
-    <br>
-    <!--Full Name-->
-    <label for="Full Name">Full Name</label>
-    <input type="text" id="Full Name">
-    <br>
-    <br>
-    <!--Message-->
-    <label for="Message">Your Message</label>
-    <input type="text" placeholder="Message"/>
-    <br>
-    <br>
-    <!--Time Input-->
-    <label for="At Time">At Time</label>
-    <input type="time" id="Time">
+    <h1>We are Help you to Become a Good Developer</h1>
+    <img src="./assets/program.jpeg" height="300px" width="500px"/>
     <br>
     <br>
     <a href="form2.html"> <button>Go For Registration Here</button> </a>
-</fieldset>
+   </fieldset>
 </body>
 </html>
