--- a/form2.html
+++ b/form2.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <title>Registration Page</title>
+    <style>
+         h1{
+            text-align: center;
+            background-color: lightsteelblue;
+         }
+    </style>
 </head>
 <body>
-    <fieldset style="background-color:aliceblue;">
+    <fieldset style="background-color:lightsteelblue;">
+    <h1>Registration Page</h1>
     <!--First Name input-->
     <label for="First Name">First Name</label>
     <input type="text" id="First Name"/>
@@ -25,11 +32,35 @@
     <input type="text" id="Phone Number"/>
     <br>
     <br>
-     <!--email Address Input-->
-     <label for="email Address">email Address</label>
-     <input type="text" id="email Address" />
+    <label for="Another Phone Number">Another Phone Number</label>
+    <input type="text" id="Another Phone Number">
+    <br>
+    <br>
+    <!--DOB input-->
+    <label for="dob">DOB</label>
+    <input type="date" id="DOB"/>
+    <br>
+    <br>
+     <!--Email Address Input-->
+     <label for="Email Address">Email Address</label>
+     <input type="text" id="Email Address" />
      <br>
      <br> 
+     <!--Address-->
+    <label for="Address">Address</label>
+    <input type="text" id="Address">
+    <br>
+    <br>
+    <!--City and State-->
+    <label for="City and State">City and State</label>
+    <input type="text" id="City and State">
+    <br>
+    <br>
+    <!--Income Input-->
+    <label for="Home Income">Home Income</label>
+    <input type="text" id="Home Income"/>
+    <br>
+    <br>
      <!--radio input-->
      <h2>Gender</h2>
      <input type="radio" id="radio"/>
@@ -40,47 +71,8 @@
      <label for="radio">others</label>
     <br>
     <br>
-    <!--Checkbox input-->
-    <h2>Select your Education</h2>
-    <input type="checkbox" id="checkbox"/>
-    <label for="checkbox">Jr.College</label>
-    <br>
-    <br>
-    <input type="checkbox" id="checkbox"/>
-    <label for="checkbox">Post Graduation</label>
-    <br>
-    <br>
-    <input type="checkbox" id="checkbox"/>
-    <label for="checkbox">Graduation</label>
-    <br>
-    <br>
-    <input type="checkbox" id="checkbox"/>
-    <label for="checkbox">Masters</label>
-    <br>
-    <br>
-    <input type="checkbox" id="checkbox"/>
-    <label for="checkbox">PHD</label>
-    <br>
-    <br>
-    <input type="checkbox" id="checkbox"/>
-    <label for="checkbox">None of These</label>
-    <br>
-    <br>
-    <h2>Select your Batch</h2>
-    <!--Select optgroup input-->
-    <select name="Batch1" id="Jr. Batch">
-        <optgroup>
-
-        <option value="Batch">Visionary Batch</option>
-        <option value="batch">Scholar Batch</option>
-        <option value="Batch">Adventious Batch</option>
-        <option value="batch">Proficient Batch</option>
-    </optgroup>
-    </select>
-    <br>
-    <br>
     <a href="form1.html"> <button>Preview</button> </a>
-    <a href="form3.html"> <button>Submit</button> </a>
+    <a href="form3.html"> <button>Next</button> </a>
 </fieldset>
 
 </body>
