--- a/form3.html
+++ b/form3.html
@@ -1,14 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Submit Page</title>
+    <title>Another Information</title>
+    <style>
+        h1{
+            text-align: center;
+            background-color: lightsteelblue;
+        }
+    </style>
 </head>
 <body>
-    <fieldset style="background-color: aliceblue;">
-    <textarea name="Tar" placeholder="Get your Feedback Here" ></textarea>
+    <fieldset style="background-color: lightsteelblue;">
+        <h1>Basic Information</h1>
+      <!--Checkbox input-->
+    <h2>Select your Education</h2>
+    <input type="checkbox" id="checkbox"/>
+    <label for="checkbox">Jr.College</label>
     <br>
     <br>
-         <h1>Thank you For Sucessfully Registered Here...</h1>
+    <input type="checkbox" id="checkbox"/>
+    <label for="checkbox">Post Graduation</label>
+    <br>
+    <br>
+    <input type="checkbox" id="checkbox"/>
+    <label for="checkbox">Graduation</label>
+    <br>
+    <br>
+    <input type="checkbox" id="checkbox"/>
+    <label for="checkbox">Masters</label>
+    <br>
+    <br>
+    <input type="checkbox" id="checkbox"/>
+    <label for="checkbox">PHD</label>
+    <br>
+    <br>
+    <input type="checkbox" id="checkbox"/>
+    <label for="checkbox">None of These</label>
+    <br>
+    <br>
+    <h2>Select your Batch</h2>
+    <!--Select optgroup input-->
+    <select name="Batch1" id="Jr. Batch">
+        <optgroup>
+
+        <option value="Batch">Visionary Batch</option>
+        <option value="batch">Scholar Batch</option>
+        <option value="Batch">Adventious Batch</option>
+        <option value="batch">Proficient Batch</option>
+    </optgroup>
+    </select>
+    <br>
+    <br>
+     <!--radio input-->
+     <h2>your opinion About This Programming</h2>
+     <input type="radio" id="radio" >
+     <label for="radio">Interested</label>
+     <br>
+     <br>
+     <input type="radio" id="radio" >
+     <label for="radio">Not-Interested</label>
+     <br>
+     <br>
+    <!--Password Input-->
+    <label for="Password">Password</label>
+    <input type="text" id="Password"/>
+    <br>
+    <br>
+    <label for="Password">Confirm Password</label>
+    <input type="password" id="Confirm Password"/>
+    <br>
+    <br>  
+    <a href="form2.html"> <button> -: Registration Page</button> </a>
+    <a href="form4.html"> <button>Submit</button> </a>
     </fieldset>
 </body>
 </html>
