--- a/resume.html
+++ b/resume.html
@@ -1,78 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Resume File</title>
+    <style>
+        h1 {
+            text-align: center;
+            background-color: rgb(250, 255, 240);
+        }
+    </style>
 </head>
+
 <body>
-    <fieldset style="background-color:aliceblue;">
+    <div style="background-color: lightsteelblue;">
         <h1>Resume</h1>
-        <h1>Himesh Ganorkar</h1> 
-        <h4>Email id:himeshganorkar1@gmail.com</h4>
-        <h4>Address:Dehankar Layout Janki Nagar Katol Dist.Nagpur</h4>
-    </fieldset>
-    <div style="background-color: rgb(233, 245, 220);">
-        <ol>
-        <li>About Education</li>
-            <h4>I am 10th pass-out from Banaraidas Ruiya High School Katol</h4>
-            <h4>I am Currently 12th Pass-out From Concept School Katol to get Entrance Exams Like Jee, MHTCET</h4>
-            <h4>and Currently get Admission at First year of Engineering</h4>
-        
-        <li>About Myself</li>
-            <h4>I am Interested in Playing Cricket and Playing Mobile or PC games</h4>
-
-        <li>About Skills</li>
-            <h4>I have Basic Knowledge of Computer</h4>
-            <h4>and Coding</h4>
-
-        <li>Experience</li>
-        <h4>Fresher</h4>
-    </ol>
+        <h1>H i m e s h G a n o r k a r</h1>
+        <h4>Place:Katol,Maharastra</h4>
+        <img src="./assets/cod.jpeg" />
+        <h4>himeshganokar2@gmail.com</h4>
+        <h4>Himeshfullstackdeveloper</h4>
+        <h4>Phone:8329904499</h4>
+        <h4>in:inhimeshh</h4>
     </div>
-    <h2>Personal Details</h2>
-    <fieldset style="background-color: rgb(234, 255, 196);">
-            <!--Father Name Input-->
-            <label for="Father Name">Father Name</label>
-            <input type="text" placeholder="Ganpat Ganorkar"/>
-            <br>
-            <!--Mother Name-->
-            <label for="Mother Name">Mother Name</label>
-            <input type="text" placeholder="Pushpa Ganorkar"/>
-            <br>
-            <!--DOB-->
-            <label for="DOB">DOB</label>
-            <input type="text" placeholder="31-05-2006">
-            <br>
-            <!--Gender-->
-            <label for="Gender">Gender</label>
-            <input type="text" placeholder="Male"/>
-            <br>
-            <!--Nationality Input-->
-            <label for="Nationality">Nationality</label>
-            <input type="text" placeholder="Indian"/>
-            <br>
-            <!--Married Input-->
-            <label for="Married Status">Married Status</label>
-            <input type="text" placeholder="unmarried"/>
-            <br>
-            <!--State-->
-            <label for="State">State</label>
-            <input type="text" placeholder="Maharastra"/>
-            <br>
-            <!--Languages Known-->
-            <label for="Languages Known">Languages Known</label>
-            <input type="text" placeholder="Marathi,English"/>
-            <br>
-            <!--Hobbies-->
-            <label for="Hobbies">Hobbies</label>
-            <input type="text" placeholder="Read Diferent Books"/>
+    <hr>
+    <fieldset style="background-color: lightsteelblue;">
+        <h1>About Me:-</h1>
+        <ul>
+            <li>My Self Himesh Ganpat Ganorkar, I am Currently Work Freshers Developer</li>
+            <li>I am Frtesherly Do work at Coding</li>
+            <li>To view My HTML projects Check in this Link
+                https://github.com/himeshfullstackdeveloper/himesh_HTML_Projects</li>
+        </ul>
+        <hr>
+       <h1>About Education</h1>
+       <ul>
+        <li>I am Pass-out My 10th from banarasidas Ruiya High School Katol</li>
+        <li>In 12th I will get admission in coaching of jee and Neet with 12th board</li>
+        <li>After Passing 12th I get Admision in First year at Engineering</li>
+        <li>My Favourite Hobbie is Reading Different Books</li>
+       </ul>
+
     </fieldset>
-         <br>
-         <!--Date Input-->
-         <label for="date">Date</label>
-         <input type="date"/>
-         <br>
-         <!--Time Input-->
-         <label for="Time">Time</label>
-         <input type="time"/>
 </body>
-</html>
