--- a/box-model.html
+++ b/box-model.html
@@ -12,7 +12,7 @@
             height: 100vh;
             background-color: aqua;
             margin-top: 100px;
-            margin-left: 500px;
+            margin-left: 500px
 
         }
 
