--- a/index.html
+++ b/index.html
@@ -2,13 +2,62 @@
 <html lang="en">
 <head>
     <title>Document</title>
+    <style>
+        .fieldset{
+            background-color: lightslategray;
+            width: 100vw;
+            height: 190vh;
+        }
+        h1{
+            background-color: dimgray;
+            width: 30vw;
+            font-size: 32px;
+            font-family: cursive;
+            text-align: center;
+        }
+        div{
+            background-color: palegoldenrod;
+            width: 60vw;
+            height: 70vh;
+        }
+        .h2{
+            text-align: center;
+            font-family: cursive;
+            font-size: 32px;
+        }
+    </style>
 </head>
 <body>
-    <a href="form.html">Form Project</a>
+    <!--main container-->
+    <div>
+    <fieldset>
+        <h2>HTML PROJECTS</h2>
+        <h1>Form projects</h1>
+        <ol>
+     <li><a href="form1.html">Form Project</a></li>
+    </ol>
     <br>
-    <a href="Table.html">Table</a>
+    <ol>
+        <h1>table Projects</h1>
+    <li><a href="Table.html">Table</a></li>
+    <li><a href="etable.html">table example</a></li>
+    </ol>
     <br>
+    <br>
+    <h1>Resume</h1>
     <a href="resume.html">Resume</a>
-    85169770
+    <br>
+    <br>
+    <h2>BASIC CSS PROJECTS</h2>
+    <ol>
+        <li><a href="box-model.html">1st Project</a></li>
+        <li><a href="box-exm.html">2nd project</a></li>
+        <li><a href="indiaflag.html">3rd Project</a></li>
+        <li><a href="excss.html">4th project</a></li>
+        <li><a href="audvid.html">5th project</a></li>
+        <li><a href="video.html">6th project</a></li>
+    </ol>
+</fieldset>
+</div>
 </body>
 </html>
