--- a/index.html
+++ b/index.html
@@ -4,21 +4,16 @@
     <title>Document</title>
     <style>
         .fieldset{
-            background-color: lightslategray;
+            background-color: lightskyblue;
             width: 100vw;
-            height: 190vh;
+            height: 400vh;
         }
         h1{
-            background-color: dimgray;
-            width: 30vw;
             font-size: 32px;
-            font-family: cursive;
-            text-align: center;
         }
         div{
-            background-color: palegoldenrod;
+            background-color: lightskyblue;
             width: 60vw;
-            height: 70vh;
         }
         .h2{
             text-align: center;
@@ -39,7 +34,7 @@
     <br>
     <ol>
         <h1>table Projects</h1>
-    <li><a href="Table.html">Table</a></li>
+    <li><a href="table.html">Table</a></li>
     <li><a href="etable.html">table example</a></li>
     </ol>
     <br>
