--- a/resume.html
+++ b/resume.html
@@ -4,26 +4,35 @@
 <head>
     <title>Resume File</title>
     <style>
-        h1 {
+        div{
+            background-color: lightskyblue;
+            font-family: Georgia, 'Times New Roman', Times, serif;
+        }
+        .fieldset{
             text-align: center;
-            background-color: rgb(250, 255, 240);
+            font-size: 16px;
+            font-style: oblique;
+        }
+        img{
+            height: 90px;
+            width: 80px;
         }
     </style>
 </head>
 
 <body>
-    <div style="background-color: lightsteelblue;">
+    <div style="background-color: lightskyblue;">
         <h1>Resume</h1>
         <h1>H i m e s h G a n o r k a r</h1>
         <h4>Place:Katol,Maharastra</h4>
-        <img src="./assets/cod.jpeg" />
+        <img src="./assets/images/boy.jpeg" />
         <h4>himeshganokar2@gmail.com</h4>
         <h4>Himeshfullstackdeveloper</h4>
         <h4>📞 8329904499</h4>
-        <h4>in:inhimeshh</h4>
+        <h4>in:@himesh</h4>
     </div>
     <hr>
-    <fieldset style="background-color: lightsteelblue;">
+    <fieldset style="background-color: lightskyblue;">
         <h1>About Me:-</h1>
         <ul>
             <li>My Self Himesh Ganpat Ganorkar, I am Currently Work Freshers Developer</li>
