--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-size: 32px;
         }
         div{
-            background-color: lightskyblue;
+            background-color: rgb(135, 250, 221);
             width: 60vw;
         }
         .h2{
@@ -48,9 +48,8 @@
         <li><a href="box-model.html">1st Project</a></li>
         <li><a href="box-exm.html">2nd project</a></li>
         <li><a href="indiaflag.html">3rd Project</a></li>
-        <li><a href="excss.html">4th project</a></li>
-        <li><a href="audvid.html">5th project</a></li>
-        <li><a href="video.html">6th project</a></li>
+        <li><a href="audvid.html">4th project</a></li>
+        <li><a href="video.html">5th project</a></li>
     </ol>
 </fieldset>
 </div>
