--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             width: 60vw;
         }
         .h2{
-            text-align: center;
             font-family: cursive;
             font-size: 32px;
         }
@@ -33,7 +32,7 @@
     </ol>
     <br>
     <ol>
-        <h1>table Projects</h1>
+        <h1>Table Projects</h1>
     <li><a href="table.html">Table</a></li>
     <li><a href="etable.html">table example</a></li>
     </ol>
