--- a/form1.html
+++ b/form1.html
@@ -3,9 +3,15 @@
 <head>
     <title>Welcome Page</title>
     <style>
-        h1{
+        fieldset{
             text-align: center;
             color: rgb(0, 0, 0);
+        }
+        .img{
+            height: 400px;
+            width: 700px;
+            margin-top: 2px;
+            margin-left: 200px;
         }
     </style>
 </head>
@@ -13,10 +19,13 @@
     <fieldset style="background-color:lightslategray;">
     <h1>Welcome in Enjoy Programming</h1>
     <h1>We are Help you to Become a Good Developer</h1>
-    <img src="./assets/program.jpeg" height="300px" width="500px"/>
+    <img src="./assets/images/hcode.jpeg" height="400px" width="700px"/>
     <br>
     <br>
-    <a href="form2.html"> <button>Go For Registration Here</button> </a>
+    <a href="resume.html"> <button>My Resume</button> </a>
+    <br>
+    <br>
+    <a href="form2.html"> <button>Sign in</button> </a>
    </fieldset>
 </body>
 </html>
