--- a/form4.html
+++ b/form4.html
@@ -7,6 +7,9 @@
             text-align: center;
             background-color:lightblues;
         }
+        .fieldset{
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -21,10 +24,12 @@
     <input type="date" id="At Date">
     <br>
     <br>
-    <textarea name="Tar" placeholder="Get your Feedback Here" ></textarea>
+    <textarea name="Tar" placeholder="Get your Feedback Here" rows="4" cols="50" ></textarea>
     <br>
     <br>
+    <div style="font-style: oblique;">
     <h1>Thank you For Sucessfully Registered Here...</h1>
+    </div>
 </fieldset>
 </body>
 </html>
