--- a/box-exm.html
+++ b/box-exm.html
@@ -8,16 +8,15 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <style>
         .container {
-            background-color: aqua;
+            background-color: lightslategrey;
             width: 30vw;
             height: 80vh;
-            margin-top: 100px;
+            margin-top: 20px;
             margin-left: 500px;
             padding: 50px;
             font-family: "Montserrat", sans-serif;
             font-optical-sizing: auto;
             font-style: normal;
-
         }
         img{
             height: 150px;
