--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <h1>Form projects</h1>
         <ol>
      <li><a href="form1.html">Form Project</a></li>
+     <li><a href="checkboxradi.html">form2</a></li>
     </ol>
     <br>
     <ol>
